Try to fix overlap at narrow width.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,9 +40,6 @@
 }
 
 .title-sidebar {
-    position: absolute;
-    top: 0px;
-    right: 0px;
     height: 100%;
     text-align: right;
 }
@@ -53,4 +50,22 @@
     transform: translateY(-50%);
 }
 
+kbd {
+    padding:0.1em 0.3em;
+    border-collapse:separate;
+    border:1px solid #ccc;
+    font:70% SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
+    background-color:#f8f8f8;
+    color:#333;
+    -moz-box-shadow:0 1px 0px rgba(0, 0, 0, 0.2),0 0 0 0px #ffffff inset;
+    -webkit-box-shadow:0 1px 0px rgba(0, 0, 0, 0.2),0 0 0 0px #ffffff inset;
+    box-shadow:0 1px 0px rgba(0, 0, 0, 0.2),0 0 0 0px #ffffff inset;
+    -moz-border-radius:0.45em;
+    -webkit-border-radius:0.45em;
+    border-radius:0.45em;
+    display:inline-block;
+    margin:0 0.1em;
+    vertical-align:middle;
+    white-space:nowrap;
+}
 
